# cdt2cmake

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/: cdt2cmake.cpp  cdtconfiguration.cpp  cdtconfiguration.h  cdtproject.cpp  cdtproject.h  listfile.h  project.cpp  project.h  sourcediscovery.cpp  sourcediscovery.h  tixml_iterator.cpp  tixml_iterator.h
test/: runTest.bash
